--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -58,3 +58,145 @@
    volume = {1},
    year = {2018},
 }
+
+@article{Bodini2019,
+   abstract = {The task of facial landmark extraction is fundamental in several applications which involve facial analysis, such as facial expression analysis, identity and face recognition, facial animation, and 3D face reconstruction. Taking into account the most recent advances resulting from deep-learning techniques, the performance of methods for facial landmark extraction have been substantially improved, even on in-the-wild datasets. Thus, this article presents an updated survey on facial landmark extraction on 2D images and video, focusing on methods that make use of deep-learning techniques. An analysis of many approaches comparing the performances is provided. In summary, an analysis of common datasets, challenges, and future research directions are provided.},
+   author = {Matteo Bodini},
+   doi = {10.3390/BDCC3010014},
+   issn = {25042289},
+   issue = {1},
+   journal = {Big Data and Cognitive Computing},
+   keywords = {Deep learning,Facial landmark extraction},
+   month = {3},
+   pages = {1-14},
+   publisher = {MDPI AG},
+   title = {A review of facial landmark extraction in 2D images and videos using deep learning},
+   volume = {3},
+   year = {2019},
+}
+
+@article{Wang2021,
+   abstract = {Deep learning applies multiple processing layers to learn representations of data with multiple levels of feature extraction. This emerging technique has reshaped the research landscape of face recognition (FR) since 2014, launched by the breakthroughs of DeepFace and DeepID. Since then, deep learning technique, characterized by the hierarchical architecture to stitch together pixels into invariant face representation, has dramatically improved the state-of-the-art performance and fostered successful real-world applications. In this survey, we provide a comprehensive review of the recent developments on deep FR, covering broad topics on algorithm designs, databases, protocols, and application scenes. First, we summarize different network architectures and loss functions proposed in the rapid evolution of the deep FR methods. Second, the related face processing methods are categorized into two classes: “one-to-many augmentation” and “many-to-one normalization”. Then, we summarize and compare the commonly used databases for both model training and evaluation. Third, we review miscellaneous scenes in deep FR, such as cross-factor, heterogenous, multiple-media and industrial scenes. Finally, the technical challenges and several promising directions are highlighted.},
+   author = {Mei Wang and Weihong Deng},
+   doi = {10.1016/J.NEUCOM.2020.10.081},
+   issn = {0925-2312},
+   journal = {Neurocomputing},
+   keywords = {Deep face recognition,Deep learning,Deep network architecture,Face processing,Face recognition database,Loss function},
+   month = {3},
+   pages = {215-244},
+   publisher = {Elsevier},
+   title = {Deep face recognition: A survey},
+   volume = {429},
+   year = {2021},
+}
+
+@article{Zafeiriou2015,
+   abstract = {Abstract Face detection is one of the most studied topics in computer vision literature, not only because of the challenging nature of face as an object, but also due to the countless applications that require the application of face detection as a first step. During the past 15 years, tremendous progress has been made due to the availability of data in unconstrained capture conditions (so-called 'in-the-wild') through the Internet, the effort made by the community to develop publicly available benchmarks, as well as the progress in the development of robust computer vision algorithms. In this paper, we survey the recent advances in real-world face detection techniques, beginning with the seminal Viola-Jones face detector methodology. These techniques are roughly categorized into two general schemes: rigid templates, learned mainly via boosting based methods or by the application of deep neural networks, and deformable models that describe the face by its parts. Representative methods will be described in detail, along with a few additional successful methods that we briefly go through at the end. Finally, we survey the main databases used for the evaluation of face detection algorithms and recent benchmarking efforts, and discuss the future of face detection.},
+   author = {Stefanos Zafeiriou and Cha Zhang and Zhengyou Zhang},
+   doi = {10.1016/J.CVIU.2015.03.015},
+   issn = {1077-3142},
+   journal = {Computer Vision and Image Understanding},
+   keywords = {Boosting,Deep neural networks,Deformable models,Face detection,Feature extraction},
+   month = {9},
+   pages = {1-24},
+   publisher = {Academic Press},
+   title = {A survey on face detection in the wild: Past, present and future},
+   volume = {138},
+   year = {2015},
+}
+
+@article{FaceDetection2001,
+   abstract = {In this paper we present a comprehensive and critical survey of face detection algorithms. Face detection is a necessary first-step in face recognition systems, with the purpose of localizing and extracting the face region from the background. It also has several applications in areas such as content-based image retrieval, video coding, video conferencing, crowd surveillance, and intelligent human-computer interfaces. However, it was not until recently that the face detection problem received considerable attention among researchers. The human face is a dynamic object and has a high degree of variability in its appearance, which makes face detection a difficult problem in computer vision. A wide variety of techniques have been proposed, ranging from simple edge-based algorithms to composite high-level approaches utilizing advanced pattern recognition methods. The algorithms presented in this paper are classified as either feature-based or image-based and are discussed in terms of their technical approach and performance. Due to the lack of standardized tests, we do not provide a comprehensive comparative evaluation, but in cases where results are reported on common datasets, comparisons are presented. We also give a presentation of some proposed applications and possible application areas.},
+   author = {Erik Hjelmås and Boon Kee Low},
+   doi = {10.1006/CVIU.2001.0921},
+   issn = {10773142},
+   issue = {3},
+   journal = {Computer Vision and Image Understanding},
+   keywords = {Face detection,Face localization,Facial feature detection,Feature-based approaches,Image-based approaches},
+   pages = {236-274},
+   publisher = {Academic Press Inc.},
+   title = {Face detection: A survey},
+   volume = {83},
+   year = {2001},
+}
+
+
+@article{MTCNN,
+   abstract = {Face detection and alignment in unconstrained environment are challenging due to various poses, illuminations and occlusions. Recent studies show that deep learning approaches can achieve impressive performance on these two tasks. In this paper, we propose a deep cascaded multi-task framework which exploits the inherent correlation between them to boost up their performance. In particular, our framework adopts a cascaded structure with three stages of carefully designed deep convolutional networks that predict face and landmark location in a coarse-to-fine manner. In addition, in the learning process, we propose a new online hard sample mining strategy that can improve the performance automatically without manual sample selection. Our method achieves superior accuracy over the state-of-the-art techniques on the challenging FDDB and WIDER FACE benchmark for face detection, and AFLW benchmark for face alignment, while keeps real time performance.},
+   author = {Kaipeng Zhang and Zhanpeng Zhang and Zhifeng Li and Yu Qiao},
+   doi = {10.1109/LSP.2016.2603342},
+   issue = {10},
+   journal = {IEEE Signal Processing Letters},
+   keywords = {Cascaded convolutional neural network (CNN),face alignment,face detection},
+   month = {4},
+   pages = {1499-1503},
+   publisher = {Institute of Electrical and Electronics Engineers Inc.},
+   title = {Joint Face Detection and Alignment using Multi-task Cascaded Convolutional Networks},
+   volume = {23},
+   url = {http://arxiv.org/abs/1604.02878 http://dx.doi.org/10.1109/LSP.2016.2603342},
+   year = {2016},
+}
+
+@article{Young1987,
+   abstract = {A new facial composites technique is demonstrated, in which photographs of the top and bottom halves of different familiar faces fuse to form unfamiliar faces when aligned with each other. The perception of a novel configuration in such composite stimuli is sufficiently convincing to interfere with identification of the constituent parts (experiment 1), but this effect disappears when stimuli are inverted (experiment 2). Difficulty in identifying the parts of upright composites is found even for stimuli made from parts of unfamiliar faces that have only ever been encountered as face fragments (experiment 3). An equivalent effect is found for composites made from internal and external facial features of well-known people (experiment 4). These findings demonstrate the importance of configurational information in face perception, and that configurations are only properly perceived in upright faces.},
+   author = {A. W. Young and D. Hellawell and D. C. Hay},
+   doi = {10.1068/P160747},
+   issn = {0301-0066},
+   issue = {6},
+   journal = {Perception},
+   keywords = {A W Young,Adult,Attention*,D C Hay,D Hellawell,Discrimination Learning,Face,Female,Form Perception*,Humans,MEDLINE,Male,NCBI,NIH,NLM,National Center for Biotechnology Information,National Institutes of Health,National Library of Medicine,Pattern Recognition,PubMed Abstract,Reaction Time,Visual*,doi:10.1068/p160747,pmid:3454432},
+   pages = {747-759},
+   pmid = {3454432},
+   publisher = {Perception},
+   title = {Configurational information in face perception},
+   volume = {16},
+   url = {https://pubmed.ncbi.nlm.nih.gov/3454432/},
+   year = {1987},
+}
+
+@article{Andrews2010,
+   abstract = {The perception and recognition of familiar faces depends critically on an analysis of the internal features of the face (eyes, nose, mouth). We therefore contrasted how information about the internal and external (hair, chin, face outline) features of familiar and unfamiliar faces is represented in face-selective regions. There was a significant response to both the internal and external features of the face when presented in isolation. However, the response to the internal features was greater than the response to the external features. There was significant adaptation to repeated images of either the internal or external features of the face in the fusiform face area (FFA). However, the magnitude of this adaptation was greater for the internal features of familiar faces. Next, we asked whether the internal features of the face are represented independently from the external features. There was a release from adaptation in the FFA to composite images in which the internal features were varied but the external features were unchanged, or when the internal features were unchanged but the external features varied, demonstrating a holistic response. Finally, we asked whether the holistic response to faces could be influenced by the context in which the face was presented. We found that adaptation was still evident to composite images in which the face was unchanged but body features were varied. Together, these findings show that although internal features are important in the neural representation of familiar faces, the face's internal and external features are represented holistically in face-selective regions of the human brain.},
+   author = {Timothy J. Andrews and Jodie Davies-Thompson and Alan Kingstone and Andrew W. Young},
+   doi = {10.1523/JNEUROSCI.4863-09.2010},
+   issn = {0270-6474},
+   issue = {9},
+   journal = {Journal of Neuroscience},
+   month = {3},
+   pages = {3544-3552},
+   pmid = {20203214},
+   publisher = {Society for Neuroscience},
+   title = {Internal and External Features of the Face Are Represented Holistically in Face-Selective Regions of Visual Cortex},
+   volume = {30},
+   url = {https://www.jneurosci.org/content/30/9/3544 https://www.jneurosci.org/content/30/9/3544.abstract},
+   year = {2010},
+}
+
+@newspaper_article{Birchall2017,
+   author = {Guy Birchall and Tom Michael and The Sun},
+   journal = {Chinese users claim iPhone X face recognition can’t tell them apart},
+   month = {12},
+   title = {Chinese users claim iPhone X face recognition can’t tell them apart},
+   url = {https://nypost.com/2017/12/21/chinese-users-claim-iphone-x-face-recognition-cant-tell-them-apart/},
+   year = {2017},
+}
+
+@article{NMI,
+   abstract = {Given the increasing popularity of algorithms for overlapping clustering, in
+particular in social network analysis, quantitative measures are needed to
+measure the accuracy of a method. Given a set of true clusters, and the set of
+clusters found by an algorithm, these sets of clusters must be compared to see
+how similar or different the sets are. A normalized measure is desirable in
+many contexts, for example assigning a value of 0 where the two sets are
+totally dissimilar, and 1 where they are identical. A measure based on
+normalized mutual information, [1], has recently become popular. We demonstrate
+unintuitive behaviour of this measure, and show how this can be corrected by
+using a more conventional normalization. We compare the results to that of
+other measures, such as the Omega index [2].},
+   author = {Aaron F. McDaid and Derek Greene and Neil Hurley},
+   doi = {10.48550/arxiv.1110.2515},
+   month = {10},
+   title = {Normalized Mutual Information to evaluate overlapping community finding algorithms},
+   url = {https://arxiv.org/abs/1110.2515v2},
+   year = {2011},
+}
+
